<resources>
    <string name="app_name">Just Vega</string>

    <string name="facebook_application_id" translatable="false">2536657096587121</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2536657096587121</string>

    <!-- Welcome Page -->
    <string name="welcome_Welcome">Welcome!</string>
    <string name="welcome_MeetJustVega">Meet Just Vega</string>
    <string name="welcome_AboutUs">ABOUT US</string>
    <string name="welcome_AboutUs_text">Lorem ipsum dolor sit amet,
        cotidieque disputando vix at, cum ea saepe vitae ocurreret.
        Vocibus molestiae scribentur ea his, ceteros omittantur neglegentur ne has.
        Alii primis gubergren sed ei, debitis molestiae splendide et duo. Duo no assentior neglegentur.
        No sea velit suscipit, ut discere luptatum probatus eos. Sed bonorum explicari
        quaerendum te, an eius inermis nam, eam eu natum menandri disputation
    </string>
    <string name="welcome_Purpose">WHY WE DO THIS</string>
    <string name="welcome_Purpose_text">An sea ferri labores nostrum, mea nusquam fierent cu.
        Est oporteat necessitatibus cu, mei verear intellegam necessitatibus ne.
        Vide consulatu ne usu. Ei mel pertinax reformidans accommodare. Ei sint idque signiferumque
        eam, an iusto definiebas assueverit est. Est at reque vivendo scriptorem. Ei amet dolores
        deserunt duo.
    </string>
    <string name="fab_label">Start Using the App</string>

    <!--  Login page  -->
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <!--  Recipe List Page  -->
    <string name="recipeList_recipe">Recipes</string>
    <string name="recipeList_filter">FILTERS</string>
    <string name="recipeList_sort">Sort</string>
    <string-array name="sort_options">
        <item>Most recent</item>
        <item>Most Popular</item>
        <item>Best Rated</item>
    </string-array>

    <!--  Search Activity  -->
    <string name="search_by_recipe">Search Recipe</string>
    <string name="search_by_ingredient">Search By Ingredient</string>
    <string name="add_ingredient">ADD</string>
    <string-array name="ingredient_suggestions">
        <item>Melk</item>
        <item>Boter</item>
        <item>Citroensap</item>
        <item>Balsamico</item>
        <item>Ricotta</item>
        <item>Eieren</item>
        <item>Zout</item>
        <item>Mosterd</item>
        <item>Rijstmeel</item>
        <item>Bloem</item>
        <item>Crème fraîche</item>
        <item>Ricotta</item>
        <item>Daslook</item>
    </string-array>

    <!--  Profile page  -->
    <string name="information_">INFORMATION</string>
    <string name="edit_">Edit</string>
    <string name="email_">email</string>
    <string name="example_gmail_com_">example.gmail.com</string>
    <string name="comfirm_">Comfirm</string>
    <string name="password_">password</string>
    <string name="secretpassword">********</string>
    <string name="your_photo">your photo</string>
    <string name="photo1_jpg">photo1.jpg</string>
    <string name="your_account">your account:</string>
    <string name="free">Free</string>
    <string name="subscribe_">SUBSCRIBE</string>
    <string name="add_allergenen_">ADD ALLERGENEN</string>
    <string name="language_">LANGUAGE</string>
    <string name="log_out">LOG OUT</string>
    <string name="delete_account">DELETE ACCOUNT</string>

    <!--  Filter page  -->
    <string name="Category1">Category 1</string>
    <string name="Category1_1">Amuses</string>
    <string name="Category1_2">Starters</string>
    <string name="Category1_3">Entrees</string>
    <string name="Category1_4">Main courses</string>
    <string name="Category1_5">Desserts and delicatesses</string>

    <string name="Category2">Category 2</string>
    <string name="Category2_1">Sugar-free</string>
    <string name="Category2_2">Dairy-free</string>
    <string name="Category2_3">Raw</string>
    <string name="Category2_4">Whole</string>
    <string name="Category2_5">Vegan</string>

    <string name="applyFilters">APPLY FILTERS</string>
    <string name="filterReset">RESET</string>

    <!-- shopping list page -->
    <string name="shopping_list_activity_title">Shopping list</string>

</resources>