<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/filter_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_light"
                    android:text="Filters"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/fui_transparent"
                    android:text="CLOSE"
                    android:drawableRight="@drawable/ic_close_green"
                    android:textColor="@color/colorTextGreen"
                    android:layout_alignParentRight="true"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorVagueGreen"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Category1"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="20sp"/>
                
                <CheckBox
                    android:text="@string/Category1_1"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category1_2"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category1_3"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category1_4"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category1_5"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Category2"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="20sp"/>

                <CheckBox
                    android:text="@string/Category2_1"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category2_2"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category2_3"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category2_4"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

                <CheckBox
                    android:text="@string/Category2_5"
                    style="@style/checkBox"
                    android:buttonTint="@color/colorVagueGreen"
                    />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>